--- a/sparta/index.html
+++ b/sparta/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
+    <meta property="og:title" content="Благотворительный проект проекта "Спарта"" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://sparta.kiev.ua/" />
+    <meta property="og:image" content="vasilkov.jpg" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
     <title>
@@ -418,6 +422,10 @@
             font-weight: bold;
         }
 
+        div.invert a {
+            color: #70b6bc;;
+        }
+
         .circle--background__mobile {
             background-color: #eb9700;
             border-radius: 50%;
@@ -709,7 +717,7 @@
             <article class="mission-content">
                 <div class="circle--background invert"></div>
                 <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="circle--background__mobile invert wow fadeIn" alt="">
-                <img src="vasilkov.jpg" class="mission-content__image mission-content__image--animation" alt="Фото Васильков" />
+                <img src="khreshatik.jpg" class="mission-content__image mission-content__image--animation" alt="Фото Крещатик" />
                 <div class="mission-content__navigation invert">
                     <h6>Чем вы можете помочь?</h6>
                     <div class="divider divider--heading">
@@ -735,7 +743,7 @@
                             <span class="link-text">Поучаствовать вместе с нами в благотворительной акции.</span>
                         </li>
                         <li>
-                            <span class="link-text">Подписаться на нашу группу в фейсбуке, для того чтобы ничего не пропустить.</span>
+                            <span class="link-text">Подписаться на нашу группу в <a href="https://www.facebook.com/%D0%A1%D0%BF%D0%B0%D1%80%D1%82%D0%B0-%D0%91%D0%BB%D0%B0%D0%B3%D0%BE-817792298600894/" target="_blank">фейсбуке</a>, для того чтобы ничего не пропустить.</span>
                         </li>
                         <li>
                             <span class="link-text">Перечислить деньги на наш проект.</span>
