--- a/sparta/index.html
+++ b/sparta/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width">
     <meta property="og:title" content="Благотворительный проект проекта "Спарта"" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://sparta.kiev.ua/" />
-    <meta property="og:image" content="vasilkov.jpg" />
+    <meta property="og:url" content="https://chebakovvladimir.github.io/sparta/" />
+    <meta property="og:image" content="https://chebakovvladimir.github.io/sparta/vasilkov.jpg" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
     <title>
