--- a/sparta/index.html
+++ b/sparta/index.html
@@ -705,10 +705,10 @@
                         <span class="divider__line--right" style="border-color:#70b6bc;"></span>
                     </div>
                     <strong style="color:#70b6bc;">
-                        На оборудование спортивного зала мы тратим 100-150 тысяч гривен. Ежемесячные траты составляют 10-12 тысяч гривен (инвентарь и зп тренеров).
+                        На оборудование одного спортивного зала мы тратим 100-150 тысяч гривен. Ежемесячные траты составляют 10-12 тысяч гривен (инвентарь и зп тренеров).
                     </strong>
                     <p>
-                        Большую часть денег нам приноссят благотворительные акции, которые мы проводим, остальное - ежемесячные пожертвования обычных людей.
+                        Большую часть денег нам приносят благотворительные акции, которые мы проводим, остальное - ежемесячные пожертвования обычных людей.
                         <br>
                         Мы постоянно ищем новые детские дома и школы-интернаты для которых мы можем улучшить спортивную жизнь. И нам нужна ваша помощь.
                     </p>
