--- a/sparta/index.html
+++ b/sparta/index.html
@@ -7,586 +7,15 @@
     <meta property="og:title" content="Благотворительный проект проекта "Спарта"" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://chebakovvladimir.github.io/sparta/" />
-    <meta property="og:image" content="https://chebakovvladimir.github.io/sparta/vasilkov.jpg" />
+    <meta property="og:image" content="https://chebakovvladimir.github.io/sparta/img/og.jpg" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <title>
         Благотворительный проект проекта "Спарта"
     </title>
-    <style media="screen">
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            color: #333;
-        }
-
-        nav, footer {
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-            background: #1A1A1A;
-            height: 68px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .global-nav-logo {
-            background-image: url(logow.png);
-            background-repeat: no-repeat;
-            background-position: 50%;
-            display: inline-block;
-            width: 185px;
-            height: inherit;
-            border-right: 2px double #272727;
-            position: relative;
-        }
-
-        .global-nav-logo-text {
-            color: #fff;
-            font-size: 8px;
-            position: absolute;
-            top: 48px;
-            left: 63px;
-            font-weight: bold;
-        }
-
-        .global-nav-drawer-button {
-            color: #fff;
-            background: inherit;
-            border: 0;
-            width: 70px;
-            font-size: 21px;
-            padding: 20px;
-            border-right: 2px double #272727;
-            cursor: pointer;
-            margin: 0;
-        }
-
-        .global-nav-locale {
-            background-color: #1A1A1A;
-            background-position: 80% center;
-            background-size: 8px auto;
-            border: 0;
-            color: #888888;
-            display: block;
-            font-size: 15px;
-            padding: 20px 40px 20px 10px !important;
-            margin-left: auto;
-        }
-
-        header {
-            min-width: 320px;
-            overflow: hidden;
-            padding: 110px 0 110px;
-            position: relative;
-        }
-
-        .header-banner__title {
-            margin: 0 auto;
-            min-width: 320px;
-            width: 1024px;
-            position: relative;
-            text-align: center;
-            z-index: 1;
-        }
-
-        .header-banner__title h1 {
-            color: #000;
-            line-height: 1;
-            margin-bottom: -5px;
-            font-size: 80px;
-            font-family: 'Montserrat', sans-serif;
-            text-transform: uppercase;
-            letter-spacing: 3px;
-        }
-
-        .header-banner__title h5 {
-            color: #9b242d;
-            font-family: "minion-pro";
-            font-style: italic;
-            font-weight: 750;
-            line-height: 1;
-            font-size: 25px;
-        }
-
-        .header-banner--opacity {
-            background-color: #fff;
-            height: 100%;
-            left: 0;
-            opacity: .6;
-            position: absolute;
-            top: 0;
-            width: 100%;
-            z-index: 0;
-        }
-
-        .header-banner__cover {
-            background-position: center;
-            background-size: cover;
-            height: 100%;
-            left: 0;
-            position: absolute;
-            top: 0;
-            width: 100%;
-            z-index: -2;
-            height: auto;
-        }
-
-        .featured-article__image {
-            background-image: url(we.jpg);
-            background-position: center;
-            background-size: cover;
-            border-radius: 50%;
-            display: inline-block;
-            margin: 4% 1.5% 5% 0;
-            padding-top: 25.39%;
-            position: relative;
-            transition: all .3s;
-            vertical-align: middle;
-            width: 25.39%;
-        }
-
-        .featured-article {
-            margin: 0 auto;
-            min-width: 320px;
-            width: 1024px;
-            text-align: center;
-        }
-
-        .featured-article__text {
-            display: inline-block;
-            max-width: 65%;
-            text-align: left;
-            vertical-align: middle;
-        }
-
-        .featured-article__image:hover {
-            opacity: .8;
-        }
-
-        h4 {
-            font-size: 2em;
-            color: #222;
-            font-family: 'Montserrat', sans-serif;
-            margin: 0 auto;
-        }
-
-        .link-text {
-            font-size: .88889em;
-            line-height: 2.3;
-            font-family: 'Montserrat', sans-serif;
-            padding: 30px 5%;
-        }
-
-        .mission {
-            margin: 0 auto;
-            min-width: 320px;
-            width: 1024px;
-        }
-
-        .mission h6 {
-            text-align: center;
-            letter-spacing: 0.1em;
-            font-weight: 400;
-            text-transform: uppercase;
-        }
-
-        h6 {
-            font-size: 1em;
-            font-family: 'Montserrat', sans-serif;
-            margin: 0;
-        }
-
-        .divider {
-            line-height: 1;
-        }
-
-        .divider--mission {
-            width: 100%;
-        }
-
-        .divider--heading {
-            margin: 10px auto 3%;
-            width: 62%;
-        }
-
-        .divider--heading span {
-            border-color: #b7b7b7;
-        }
-
-        .divider__line {
-            border-top: 1px solid #70b6bc;
-            display: inline-block;
-            vertical-align: top;
-            width: calc(50% - 15px);
-        }
-
-        .divider__line {
-            border-top: 1px solid #70b6bc;
-            display: inline-block;
-            vertical-align: top;
-            width: calc(50% - 15px);
-        }
-
-        .divider__line--left {
-            border-top: 1px solid #70b6bc;
-            display: inline-block;
-            vertical-align: top;
-            width: calc(17% - 15px);
-            border-color: #eb9700;
-        }
-
-        .divider__arrow {
-            border: 1px solid #70b6bc;
-            display: inline-block;
-            height: 15px;
-            margin: -7px 2px 0;
-            -webkit-transform: rotate(138deg) skewX(20deg) skewY(20deg);
-            -ms-transform: rotate(138deg) skewX(20deg) skewY(20deg);
-            transform: rotate(138deg) skewX(20deg) skewY(20deg);
-            vertical-align: top;
-            width: 15px;
-        }
-
-        .divider__arrow--up {
-            border-left: 0;
-            border-bottom: 0;
-            border-color: #eb9700;
-        }
-
-        .divider__arrow--down {
-            border-bottom: 0;
-            border-left: 0;
-        }
-
-        .divider__line--right {
-            border-top: 1px solid #70b6bc;
-            display: inline-block;
-            vertical-align: top;
-            width: calc(83% - 15px);
-            border-color: #eb9700;
-        }
-
-        .circle--background {
-            background-color: #eb9700;
-            border-radius: 50%;
-            left: 0;
-            opacity: .1;
-            padding-top: 100%;
-            position: absolute;
-            top: 0;
-            width: 100%;
-            z-index: -1;
-        }
-
-        .circle--background.invert {
-            background-color: #70b6bc;
-        }
-
-        .mission-content {
-            zoom: 1;
-            overflow: hidden;
-            padding: 4% 0;
-            position: relative;
-        }
-
-        .mission-content__person {
-            float: right;
-            max-width: 49%;
-            position: relative;
-            z-index: 2;
-        }
-
-        .mission-content__title--animation {
-            margin-bottom: 0;
-            min-height: 130px;
-            position: relative;
-        }
-
-        .mission-content__title-holder {
-            opacity: 1;
-            width: 100%;
-        }
-
-        .mission-content h2.invert {
-            font-weight: 600;
-            font-size: 2em;
-            line-height: 1.1;
-            margin: 15px 0;
-            text-transform: uppercase;
-            text-align: center;
-        }
-
-        .mission-content h2 {
-            line-height: .88;
-            margin-bottom: -.5%;
-        }
-
-        .mission-content h4.invert {
-            line-height: .88;
-            padding-bottom: .3%;
-            text-transform: uppercase;
-            font-size: 3em;
-            font-weight: bold;
-            border-bottom: 4px solid #eb9700;
-            text-align: center;
-            width: 65%;
-        }
-
-        .mission-content__image {
-            display: block;
-            margin: auto;
-            position: relative;
-            width: 65%;
-            padding-top: 20px;
-        }
-
-        .mission-content__description {
-            position: relative;
-            margin: auto;
-            width: 65%;
-        }
-
-        .mission-content__navigation {
-            margin-top: 4%;
-            position: relative;
-        }
-
-        .mission-content__description h3 {
-            margin-bottom: 3%;
-            text-transform: uppercase;
-            font-weight: bold;
-        }
-
-        h3 {
-            font-size: 2.66667em;
-        }
-
-        ul {
-            list-style: none;
-        }
-
-        .mission-content__description strong {
-            color: #eb9700;
-            display: block;
-            font-weight: 700;
-            line-height: 1.4;
-            margin: -1% 0 1.6%;
-            text-transform: uppercase;
-        }
-
-        .mission-content__description p {
-            font-family: "Montserrat";
-            font-size: .88889em;
-            line-height: 1.5;
-        }
-
-        .mission-content__navigation strong {
-            background-color: #eb9700;
-            color: #fff;
-            display: block;
-            font-size: .77778em;
-            font-weight: 700;
-            line-height: 1;
-            padding: 5% 8%;
-            text-transform: uppercase;
-        }
-
-        .mission-content__navigation .mission-content__navigation-links {
-            width: 65%;
-            margin: auto;
-        }
-
-        .mission-content__navigation li {
-            margin-bottom: 12px;
-        }
-        .mission-content__navigation li::before {
-            content: '';
-            width: 12px;
-            height: 12px;
-            background: #eb9700;
-            display: inline-block;
-        }
-        .mission-content__navigation.invert li::before {
-            background: #70b6bc;
-        }
-        .mission-content__navigation.red li::before {
-            background: #b8293d;
-        }
-        p a,
-        li a,
-        div a {
-            color: #b8293d;;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        div.invert a {
-            color: #70b6bc;;
-        }
-
-        .circle--background__mobile {
-            background-color: #eb9700;
-            border-radius: 50%;
-            display: none;
-            height: 100%;
-            opacity: .1;
-            position: absolute;
-            right: 10%;
-            top: 0;
-            z-index: -1;
-        }
-
-        .circle--background__mobile.invert {
-            background-color: #70b6bc;
-            left: 10%;
-            right: auto;
-        }
-
-        input {
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-            background: #fdfdfd;
-            font-size: 16px;
-            font-family: "Helvetica Neue", "HelveticaNeue", Arial, "Roboto", sans-serif;
-            border: 2px solid #70b6bc;
-            color: #222222;
-            line-height: 1.5;
-            margin: 0 auto 5px auto;
-            max-width: 370px;
-            padding: 12px 0 12px 0;
-            text-align: center;
-            width: 50%;
-        }
-
-        button {
-            border: 2px solid #70b6bc;
-            color: #70b6bc;
-            background: white;
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-            display: block;
-            font-size: 16px;
-            font-family: ff-din-web, "Helvetica Neue", "Segoe UI", Arial, freesans, sans-serif;
-            line-height: 1.5;
-            margin: 0 auto 5px auto;
-            max-width: 370px;
-            padding: 12px 0 12px 0;
-            text-align: center;
-            text-transform: uppercase;
-            width: 50%;
-            cursor: pointer;
-        }
-
-        @media screen and (max-width: 480px) {
-            .header-banner__title h1 {
-                font-size: 2.53333em;
-                line-height: .9;
-                margin-bottom: -5px;
-            }
-            .header-banner__title {
-                width: 100%;
-            }
-            .header-banner__title h5 {
-                font-size: 1.2em;
-            }
-            .header-banner {
-                padding: 0;
-            }
-            .global-nav-locale {
-                width: 110px;
-            }
-            .header-banner__cover {
-                transform: scale(2);
-                height: 100%;
-            }
-            header {
-                border-bottom: 1px solid;
-            }
-            .featured-article__image {
-                padding-top: 45%;
-                width: 45%;
-                margin: -7% auto 2%;
-            }
-            .featured-article {
-                width: 100%;
-                padding-top: 0;
-            }
-            .featured-article__text {
-                display: block;
-                margin-bottom: 10%;
-                max-width: 100%;
-                text-align: center;
-            }
-            .mission {
-                margin-bottom: 6.5%;
-                padding: 0;
-                width: 100%;
-            }
-            .divider--heading {
-                width: 95%;
-            }
-            .mission-content__person {
-                display: none;
-            }
-            .mission-content h2.invert {
-                font-size: 1.3em;
-                width: 100%;
-                text-align: center;
-            }
-            .mission-content h4.invert {
-                border-bottom-width: 4px;
-                font-size: 2.2em;
-                width: 100%;
-                text-align: center;
-            }
-            .mission-content {
-                padding: 4% 5%;
-            }
-            .mission-content__image {
-                padding-left: 0;
-                width: 100%;
-            }
-            h3 {
-                font-size: 1.5em;
-            }
-            .mission-content__description {
-                padding-left: 0;
-                padding-top: 10%;
-                width: 100%;
-            }
-            .mission-content__navigation strong {
-                padding: 2.2% 3.8%;
-            }
-            .mission-content__navigation {
-                float: left;
-                margin-top: 10%;
-                padding-right: 0;
-            }
-            .mission-content__navigation .mission-content__navigation-links {
-                padding: 0 4%;
-                width: auto;
-            }
-            .circle--background__mobile {
-                display: block;
-            }
-            .circle--background {
-                display: none;
-            }
-            input, button {
-                width: 100%;
-            }
-            .link-text {
-                text-align: center;
-            }
-        }
-    </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-    <script>new WOW().init();</script>
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/animate.css"> -->
+    <script src="js/wow.min.js"></script>
 </head>
 
 <body>
@@ -613,8 +42,8 @@
                     <h5>мы работаем над тем чтобы у всех были одинаковые условия для развития</h5>
                 </div>
             </div>
-            <video class="header-banner__cover" autoplay="" muted loop="" poster="https://scontent.fiev21-2.fna.fbcdn.net/v/t15.5256-10/56555983_2341352929484066_1488863422614339584_n.jpg?_nc_cat=103&_nc_ht=scontent.fiev21-2.fna&oh=380213735dadef587e8117910e860d79&oe=5D2F54B7">
-                <source type="video/mp4" src="video.mp4">
+            <video class="header-banner__cover" autoplay="" muted loop="" poster="img/poster.jpg">
+                <source type="video/mp4" src="video/video-tiny.mp4">
             </video>
         </header>
 
@@ -655,7 +84,7 @@
                         </h4>
                     </div>
                 </div>
-                <img src="vasilkov.jpg" class="mission-content__image mission-content__image--animation" alt="Фото Васильков" />
+                <img src="img/vasilkov-tiny.jpg" class="mission-content__image mission-content__image--animation" alt="Фото Васильков" />
                 <div class="mission-content__description mission-content__description--animation">
                     <h3>мы верим</h3>
                     <div class="divider divider--mission">
@@ -717,7 +146,7 @@
             <article class="mission-content">
                 <div class="circle--background invert"></div>
                 <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="circle--background__mobile invert wow fadeIn" alt="">
-                <img src="khreshatik.jpg" class="mission-content__image mission-content__image--animation" alt="Фото Крещатик" />
+                <img src="img/khreshatik.jpg" class="mission-content__image mission-content__image--animation" alt="Фото Крещатик" />
                 <div class="mission-content__navigation invert">
                     <h6>Чем вы можете помочь?</h6>
                     <div class="divider divider--heading">
