--- a/sparta/index.html
+++ b/sparta/index.html
@@ -13,7 +13,7 @@
     <title>
         Благотворительный проект проекта "Спарта"
     </title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <script src="js/wow.min.js"></script>
 </head>
 
@@ -174,7 +174,7 @@
                             <span class="link-text">Подписаться на нашу группу в <a href="https://www.facebook.com/%D0%A1%D0%BF%D0%B0%D1%80%D1%82%D0%B0-%D0%91%D0%BB%D0%B0%D0%B3%D0%BE-817792298600894/" target="_blank">фейсбуке</a>, для того чтобы ничего не пропустить.</span>
                         </li>
                         <li>
-                            <span class="link-text">Перечислить деньги на наш проект.</span>
+                            <span class="link-text">Перечислить деньги на наш проект на карту ПриватБанка <a>4149 6293 9338 8780</a> (Семенов С.)</span>
                         </li>
                     </ul>
                     <div style="display:none;">
