--- a/sparta/index.html
+++ b/sparta/index.html
@@ -13,7 +13,7 @@
     <title>
         Благотворительный проект проекта "Спарта"
     </title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <script src="js/wow.min.js"></script>
 </head>
 
