--- a/sparta/index.html
+++ b/sparta/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
-    <meta property="og:title" content="Благотворительный проект проекта "Спарта"" />
+    <meta property="og:title" content="Благотворительный проект проекта 'Спарта'" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://chebakovvladimir.github.io/sparta/" />
-    <meta property="og:image" content="https://chebakovvladimir.github.io/sparta/img/og.jpg" />
+    <meta property="og:url" content="http://blago.sparta.kiev.ua/" />
+    <meta property="og:image" content="http://blago.sparta.kiev.ua/img/og.jpg" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <title>
